[tool.poetry]
name = "project_template"
version = "0.1.0"
description = "A new project"
authors = ["Luis Augusto Eijy Nagai <eijynagai@gmail.com>"]
readme = "README.md"
packages = [{ include = "my_project" }] 

[tool.poetry.dependencies]
python = ">=3.9" 

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.1.2"
isort = "^6.0.0"
mypy = "^1.15.0"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
pre-commit = "^4.1.0"
